# library-manager

./: .buildinfo  CMakeLists.txt  README.rst  genindex.html  index.html  intro.html  library_manager.html  library_manager_utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: intro.rst.txt
cmake/: LibraryManager.cmake
cmake/cmake-3.20/: FindBLAS.cmake  FindLAPACK.cmake
test/: CMakeLists.txt  cblas.h  lapacke.h  testblas.cpp  testblaslapack.cpp  testeigen.cpp  testlapack.cpp  testlib.cpp
test/molpro/: cblas.h  lib.cpp  lib.h
